Updating the homepage to follow html5rocks.com

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,26 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A resource for developers looking to put HTML5 to use today, including information on specific features and when to use them in your apps.">
 <meta name="keywords" content="html5,html 5,html5 demos,html5 examples,javascript,css3,notifications,geolocation,web workers,apppcache,file api,filereader,indexeddb,offline,audio,video,drag and drop,chrome,sse,mobile">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>HTML5Rocks Updates</title>
 
-<link rel="stylesheet" media="all" href="http://www.html5rocks.com/static/css/base.css">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,800|Source+Code+Pro" rel="stylesheet">
-<link rel="stylesheet" type="text/css" media="screen" href="http://1-ps.googleusercontent.com/x/s.updaterocker.appspot.com/updates.html5rocks.com/static/html5rocks/css/A.updates.css.pagespeed.cf.JuNJPUo6P1.css">
+<!-- Add to homescreen for Chrome on Android -->
+<meta name="mobile-web-app-capable" content="yes">
+<link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
-<link rel="stylesheet" type="text/css" media="screen" href="/css/updates.css">
+<!-- Add to homescreen for Safari on iOS -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+
+<!-- Tile icon for Win8 (144x144 + tile color) -->
+<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+<meta name="msapplication-TileColor" content="#3372DF">
+
+<!-- TODO: consider rel=canonical -->
+<!-- TODO: consider rel=publisher -->
+
 <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css">
+
