--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,45 @@
   </head>
   <body>
     {% include header.html %}
-    <a class="watermark" href="http://www.html5rocks.com/"></a>
-    <div class="page">
+    <div class="body-content">
+      <section class="banner">
+        <section class="container">
+          <a href="/en/" class="watermark"></a>
+          <h1>Updates</h1>
+          <h2>What is new in HTML5 world</h2>
+        </section>
+      </section>
       {{content}}
     </div>
+    <footer class="footer">
+      <div class="container">
+        <strong>HTML5 Rocks</strong> is a <img src="/images/google_logo_small.png" alt="Google logo" title="Google"> project.
+      </div>
+    </footer>
+
+    <script>
+      (function() {
+
+        var siteHeader = document.getElementById('siteheader');
+        var navToggle = document.getElementById('navtoggle');
+        var siteNav = document.getElementById('sitenav');
+
+        navToggle.addEventListener('click', function(e) {
+          siteNav.classList.toggle('active');
+          e.preventDefault();
+        });
+
+      })();
+      </script>
+
+    <!-- TODO: change UA-XXXXX-X -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-XXXXX-X', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
