--- a/css/main.scss
+++ b/css/main.scss
@@ -4,44 +4,33 @@
 @charset "utf-8";
 
 
+/* Variables */
 
-// Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-$on-palm:          600px;
-$on-laptop:        800px;
+$break-small-screen: 600px;
+$break-large-screen: 1024px;
 
 
+@import "h5bp";
+@import "normalize";
 
-// Using media queries with like this:
-// @include media-query($palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+@import "syntax-highlighting";
+
+@import "header";
+@import "banner";
+@import "article";
+@import "footer";
+
+
+html, body {
+  height: 100%;
+  width: 100%;
+  background: #EEE;
 }
 
-
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "syntax-highlighting"
-;
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
+}
