--- a/_includes/avatar.html
+++ b/_includes/avatar.html
@@ -1,10 +1,14 @@
-{% for author in post.authors %}
-  {% assign contributor = site.data._contributors[author] %}
-  <span class="author">
-    <!-- TODO: change image address.-->
-    <img src="http://www.html5rocks.com/static/images/profiles/{{author}}.png"
-         alt="{{contributor.name.given}} {{contributor.name.family}}"
-         title="{{contributor.name.given}} {{contributor.name.family}}"
-         width="60" height="60">
-  </span>
-{% endfor %}
+{% assign contributor = site.data._contributors[include.author] %}
+<!-- TODO: change image address.-->
+{% if include.linkify %}
+<a href="/profiles/#{{author}}">
+{% endif %}
+<img src="http://www.html5rocks.com/static/images/profiles/{{author}}.png"
+     alt="{{contributor.name.given}} {{contributor.name.family}}"
+     title="{{contributor.name.given}} {{contributor.name.family}}"
+     width="60" height="60"
+     class="avatar">
+{% if include.linkify %}
+</a>
+{% endif %}
+
