--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -1,130 +1,79 @@
-.content-wrapper {
-  position: relative;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #555;
-  word-wrap: break-word;
-  background: #FFF;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.25);
+.article {
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: antialiased;
-}
-
-.articles-list {
-  position: relative;
-  padding: 2em 1em;
-}
-
-.articles-list ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.articles-list ul li {
-  padding: 20px 0 20px 0;
-  border-top: 1px solid #DDD;
-  list-style: none;
-  width: 100%;
-  background: #FFF;
-  display: block;
-  float: left;
-}
-
-.articles-list ul li:nth-child(1) {
-  border-top: none;
-  padding-top: 0;
-}
-
-.articles-list ul li:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
-}
-
-.articles-list ul li a {
-  display: block;
-  background: #FFF;
-}
-
-.articles-list .left {
-  display: block;
-  float: left;
-  width: 7%;
-  min-width: 70px;
-  padding-left: 4%;
-}
-
-.articles-list .right {
-  display: block;
-  float: left;
-  width: 70%;
-  margin: 0 0 0 1%;
-}
-
-.articles-list .author img {
-  border: 2px solid #FFF;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-}
-
-.articles-list .title {
-  background: none;
-  color: #333;
-  font-size: 17px;
-  font-family: 'Open Sans';
-  font-weight: 800;
-  display: block;
-  margin-bottom: 0.6em;
-  transition: color 0.3s ease-out;
-}
-
-.articles-list .date {
-  display: block;
-  margin-bottom: 0.4em;
-  line-height: 1;
-  color: #666;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.articles-list a:hover .title {
-  color: #666;
-}
-
-.articles-list .description {
-  color: #666;
-  font-size: 15px;
-  line-height: 1.2;
-  display: block;
-  margin-bottom: 0.6em
-}
-
-.articles-list .tag {
-  font-size: 12px;
-  text-transform: uppercase;
-  margin-right: 5px;
-}
-
-@media (min-width: $break-large-screen) {
-  .articles-list .left {
-    padding-left: 2%;
+  a {
+    text-decoration: underline;
   }
 
-  .articles-list ul li {
-    float: left;
-    width: 48%;
+  p {
+    margin: 0.4em 0 0.8em 0;
   }
 
-  .articles-list ul li:nth-child(2n+1) {
-    clear: left;
-    margin-right: 3%;
+  h2, h3, h4, h5 {
+    color: #333;
+    font-family: 'Open Sans';
+    font-weight: 600;
+    margin: 1.3em 0 0.7em 0;
+    clear: both;
+    max-width: 85%;
+  }
+  h1 { font-size: 150%; }
+  h2 { font-size: 135%; }
+  h3 { font-size: 120%; }
+  h4 { font-size: 110%; }
+  h5 { font-size: 105%; }
 
+  .tag {
+    text-decoration: none;
   }
 
-  .articles-list ul li:nth-child(2) {
-    border-top: none;
-    padding-top: 0;
+  .author-images {
+    img {
+      width: 80px;
+      height: 80px;
+      border: 3px solid #FFF;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.4);
+      border-radius: 100%;
+      margin-bottom: 1em;
+
+    }
+    a {
+      text-decoration: none;
+      margin: 1em 0.5em;
+      display: inline-block;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 
+  .byline {
+    font-size: 0.9em;
+    padding: 3em 0 1em 0;
+    text-align: center;
+
+    .authors {
+      font-size: 1em;
+      padding-bottom: 0.3em;
+    }
+
+    a { color: #555; }
+    a:visited { color: #777; }
+  }
+
+  @media (min-width: $break-small-screen) {
+    .author-images {
+      margin-right: 2em;
+      display: inline-block;
+      float: left;
+
+      a {
+        margin: -0.1em 0.5em;
+      }
+    }
+
+    .byline {
+      text-align: left;
+    }
+  }
 }
