--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -11,7 +11,7 @@
     text-transform: uppercase;
     text-shadow: 0 1px 1px rgba(0,0,0,0.3);
     position: relative;
-    padding: 0 0 0 1em;
+    padding: 0 1rem 0 0;
   }
 
   a {
