--- a/css/main.scss
+++ b/css/main.scss
@@ -71,7 +71,7 @@ img.avatar {
   font-size: 0.7em;
   text-transform: uppercase;
   text-decoration: none;
-  margin-right: 5px;
+  margin-right: 1em;
 }
 
 p {
