--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
   <div class="container">
+    {% if page.article %}
     <h1>Next steps</h1>
     <aside class="panel share">
       <h2>Share</h2>
@@ -11,6 +12,7 @@
       <h2>Subscribe</h2>
       <p>Enjoyed this article? Grab the <a href="http://feeds.feedburner.com/html5rocks">RSS feed</a> and stay up-to-date.</p>
     </aside>
+    {% endif %}
     <p class="licensing">
       Except as otherwise <a href="http://code.google.com/policies.html#restrictions">noted</a>, the content of this page is licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>, and code samples are licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>.
     </p>
