--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,5 +22,5 @@
 <!-- TODO: consider rel=canonical -->
 <!-- TODO: consider rel=publisher -->
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,800|Source+Code+Pro" rel="stylesheet">
-<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css">
+<link rel="stylesheet" type="text/css" media="screen" href="{{site.url}}/css/main.css">
 
