--- a/_sass/404.scss
+++ b/_sass/404.scss
@@ -21,21 +21,22 @@
   -webkit-transform-style: preserves-3d;
   -moz-perspective: 500px;
   -moz-transform-style: preserves-3d;
-}
-#oops img {
-  width: 256px;
-  height: 256px;
-  -webkit-animation-name: spin;
-  -webkit-animation-duration: 5s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-delay: 2s;
-  -moz-animation-name: spin;
-  -moz-animation-duration: 5s;
-  -moz-animation-iteration-count: infinite;
-  -moz-animation-delay: 2s;
-}
-#oops:hover img {
-  -webkit-animation-duration: 500ms;
-  -moz-animation-duration: 500ms;
+
+  img {
+    width: 256px;
+    height: 256px;
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 5s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-delay: 2s;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 5s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-delay: 2s;
+  }
+  &:hover img {
+    -webkit-animation-duration: 500ms;
+    -moz-animation-duration: 500ms;
+  }
 }
