--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,9 @@
   <nav id="sitenav" class="container">
     <ul>
       <li id="tutorials_menu">
+        <a href="http://www.html5rocks.com" class="tutorials">Home</a>
+      </li>
+      <li id="tutorials_menu">
         <a href="http://www.html5rocks.com/en/tutorials/?page=1" class="tutorials">Tutorials</a>
       </li>
       <li id="updates_menu">
