--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -1,7 +1,7 @@
   {% for author in include.authors %}
     {% assign contributor = site.data._contributors[author] %}
     <!-- TODO: change link. -->
-    <strong>By</strong> <a href="/profiles/#{{author}}">
+    <strong>By</strong> <a href="{{site.html5rocks_url}}/profiles/#{{author}}">
       {{contributor.name.given}} {{contributor.name.family}}
     </a> {% if forloop.last == false %} and {% endif %}
   {% endfor %}
