--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
 
 
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,800|Source+Code+Pro" rel="stylesheet">
-<link rel="stylesheet" type="text/css" media="screen" href="{{site.url}}/css/main.css">
+{% stylesheet main %}
 
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5-els.js"></script>
