--- a/_assets/stylesheets/_footer.scss
+++ b/_assets/stylesheets/_footer.scss
@@ -77,7 +77,7 @@ footer {
       display: inline-block;
       width: 48px;
       height: 48px;
-      background-image: url(../images/icons.png);
+      background-image: image-url("icons.png");
       background-size: 296px 56px;
       background-repeat: no-repeat;
       text-indent: -100em;
@@ -91,7 +91,7 @@ footer {
 
     &.rss h2 {
       padding-left: 40px;
-      background-image: url(../images/icons.png);
+      background-image: image-url("icons.png");
       background-size: 148px 28px;
       background-repeat: no-repeat;
       background-position: -120px 0;
