--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 <meta name="description" content="A resource for developers looking to put HTML5 to use today, including information on specific features and when to use them in your apps.">
 <meta name="keywords" content="html5,html 5,html5 demos,html5 examples,javascript,css3,notifications,geolocation,web workers,apppcache,file api,filereader,indexeddb,offline,audio,video,drag and drop,chrome,sse,mobile">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="E1HOIDkksrWY5npenL8FeQhKn4Ujctd75iO2lfufSyA" />
 <title>{{page.title}}</title>
 
 <!-- Add to homescreen for Chrome on Android -->
