adding theme-color to header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 <!-- Add to homescreen for Chrome on Android -->
 <meta name="mobile-web-app-capable" content="yes">
 <link rel="icon" sizes="192x192" href="  {% asset_path HTML5_Badge_192.png %}">
+<meta name="theme-color" content="#3372DF">
 
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
