--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <div class="body-content">
       <section class="banner">
         <section class="container">
-          <a href="/en/" class="watermark"></a>
+          <a href="/" class="watermark"></a>
           <h1>{{page.title}}</h1>
           {% if page.subtitle %}<h2>{{page.subtitle}}</h2>{% endif %}
         </section>
