Changing color to HTML5Rocks Orange

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <!-- Add to homescreen for Chrome on Android -->
 <meta name="mobile-web-app-capable" content="yes">
 <link rel="icon" sizes="192x192" href="  {% asset_path HTML5_Badge_192.png %}">
-<meta name="theme-color" content="#3372DF">
+<meta name="theme-color" content="#f04530">
 
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
 <!-- Tile icon for Win8 (144x144 + tile color) -->
 <meta name="msapplication-TileImage" content="{% asset_path HTML5_Badge_144.png %}
 ">
-<meta name="msapplication-TileColor" content="#3372DF">
+<meta name="msapplication-TileColor" content="#f04530">
 
 <!-- TODO: consider rel=canonical -->
 <link rel="alternate" type="application/rss+xml" title="HTML5 Rocks RSS" href="http://feeds.feedburner.com/html5rocks">
