Adding a manifest to the site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,19 +9,18 @@
 
 <!-- Add to homescreen for Chrome on Android -->
 <meta name="mobile-web-app-capable" content="yes">
-<link rel="icon" sizes="192x192" href="  {% asset_path HTML5_Badge_192.png %}">
+<link rel="manifest" href="/manifest.json">
+<link rel="icon" sizes="192x192" href="{% asset_path HTML5_Badge_192.png %}">
 <meta name="theme-color" content="#f04530">
 
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="HTML5 Rocks">
-<link rel="apple-touch-icon-precomposed" href="{% asset_path HTML5_Badge_192.png %}
-">
+<link rel="apple-touch-icon-precomposed" href="{% asset_path HTML5_Badge_192.png %}">
 
 <!-- Tile icon for Win8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage" content="{% asset_path HTML5_Badge_144.png %}
-">
+<meta name="msapplication-TileImage" content="{% asset_path HTML5_Badge_144.png %}">
 <meta name="msapplication-TileColor" content="#f04530">
 
 <!-- TODO: consider rel=canonical -->
