--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,8 @@
 <meta name="msapplication-TileColor" content="#f04530">
 
 <!-- TODO: consider rel=canonical -->
-<link rel="alternate" type="application/rss+xml" title="HTML5 Rocks RSS" href="http://feeds.feedburner.com/html5rocks">
+<link rel="alternate" type="application/rss+xml" title="HTML5 Rocks RSS" href="http://updates.html5rocks.com/feeds/rss.xml">
+<link rel="alternate" type="application/atom+xml" title="HTML5 Rocks RSS" href="http://updates.html5rocks.com/feeds/atom.xml">
 <link rel="publisher" href="https://plus.google.com/+GoogleChromeDevelopers">
 {% if page.article %}
   {% for author in page.authors %}
