--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     </aside>
     <aside class="panel rss">
       <h2>Subscribe</h2>
-      <p>Enjoyed this article? Grab the <a href="/rss">RSS feed</a> and stay up-to-date.</p>
+      <p>Enjoyed this article? Grab the <a href="/feeds/rss.xml">RSS feed</a> and stay up-to-date.</p>
     </aside>
     {% endif %}
     <p class="licensing">
