--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,22 +3,22 @@
   <nav id="sitenav" class="container">
     <ul>
       <li id="tutorials_menu">
-        <a href="http://www.html5rocks.com" class="tutorials">Home</a>
+        <a href="{{ site.html5rocks_url }}" class="tutorials">Home</a>
       </li>
       <li id="tutorials_menu">
-        <a href="http://www.html5rocks.com/en/tutorials/?page=1" class="tutorials">Tutorials</a>
+        <a href="{{ '/en/tutorials/?page=1' | prepend: site.html5rocks_url }}" class="tutorials">Tutorials</a>
       </li>
       <li id="updates_menu">
-        <a href="http://www.html5rocks.com/en/updates" class="updates">Updates</a>
+        <a href="{{ '/en/updates' | prepend: site.html5rocks_url }}" class="updates">Updates</a>
       </li>
       <li id="contrib_menu">
         <a href="https://github.com/html5rocks/www.html5rocks.com/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a>
       </li>
       <li id="slides_menu">
-        <a href="http://www.html5rocks.com/en/slides" class="slides">Slides</a>
+        <a href="{{ '/en/slides' | prepend: site.html5rocks_url }}" class="slides">Slides</a>
       </li>
       <li id="resources_menu">
-        <a href="http://www.html5rocks.com/en/resources" class="resources">Resources</a>
+        <a href="{{ '/en/resources' | prepend: site.html5rocks_url }}" class="resources">Resources</a>
       </li>
     </ul>
   </nav>
