--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -8,7 +8,7 @@ layout: default
         {% for post in site.posts %}
           {% if post.tags contains page.tag %}
           <li>
-            <a href="{{ post.url | prepend: site.url }}">
+            <a href="{{ post.url | prepend: site.baseurl }}">
               <span class="left">
               {% for author in post.authors %}
                 {% include avatar.html author=author%}
@@ -27,7 +27,7 @@ layout: default
               <span class="clear"></span>
             </a>
           </li>
-          {%endif%}
+          {% endif %}
         {% endfor %}
       </ul>
     </div>
