--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -8,6 +8,10 @@
     margin: 0.4em 0 0.8em 0;
   }
 
+  table {
+    margin: 1em 0 2em 0;
+  }
+
   h2, h3, h4, h5 {
     color: #333;
     font-family: 'Open Sans';
