We're moving - banner and other updates

--- a/_assets/stylesheets/_header.scss
+++ b/_assets/stylesheets/_header.scss
@@ -1,7 +1,8 @@
 #siteheader {
   overflow: hidden;
-  background: #ED4732;
-  background: linear-gradient(0deg, #DA421C, #DB5945);
+  /*background: #ED4732;
+  background: linear-gradient(0deg, #DA421C, #DB5945);*/
+  background: #333;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
   position: relative;
 }
