--- a/_assets/stylesheets/main.css.scss
+++ b/_assets/stylesheets/main.css.scss
@@ -24,6 +24,7 @@ $font-code: "Source Code Pro", monospace;
 @import "disqus";
 @import "footer";
 @import "404";
+@import "moving";
 
 
 html, body {
