--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,8 +25,7 @@
 
 <!-- TODO: consider rel=canonical -->
 <link rel="canonical" href="https://developers.google.com/web/updates{{page.url}}">
-<link rel="alternate" type="application/rss+xml" title="HTML5 Rocks RSS" href="http://updates.html5rocks.com/feeds/rss.xml">
-<link rel="alternate" type="application/atom+xml" title="HTML5 Rocks RSS" href="http://updates.html5rocks.com/feeds/atom.xml">
+<link rel="alternate" type="application/atom+xml" title="Web Updates - Google Developers" href="https://developers.google.com/web/updates/feed.xml">
 <link rel="publisher" href="https://plus.google.com/+GoogleChromeDevelopers">
 {% if page.article %}
   {% for author in page.authors %}
